--- a/report/references.bib
+++ b/report/references.bib
@@ -5,3 +5,38 @@
  year = {2017},
  url = {https://github.com/MaxRickettsUy/411_ARM_PROJECT}
 }
+
+@online{coranac,
+ title = {Another fast fixed-point sine approximation},
+ author = {Jasper Vijn},
+ month = {July},
+ year = {2009},
+ url = {http://www.coranac.com/2009/07/sines/}
+}
+
+@article{volder1959cordic,
+  title={The CORDIC trigonometric computing technique},
+  author={Volder, Jack E},
+  journal={IRE Transactions on electronic computers},
+  number={3},
+  pages={330--334},
+  year={1959},
+  publisher={IEEE}
+}
+
+@online{cainemail,
+ title = {Cordic algorithm implementation in ARM assembly language},
+ author = {Mitchell Devlin},
+ month = {December},
+ year = {2017},
+ url = {https://github.com/mdevlin1/CordicAlgoARM}
+}
+
+@manual{registeroffsetmanual,
+ title = {Cortex-M3 processors},
+ chapter = {3.4.3.},
+ publisher = {ARM Limited},
+ edition = {r2p1},
+ year = {2010},
+ url = {http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.dui0552a/BABJGHFJ.html}
+}
