--- a/report/references.bib
+++ b/report/references.bib
@@ -1,5 +1,5 @@
 @online{oldproj,
- title = {411_ARM_PROJECT},
+ title = {411\_ARM\_PROJECT},
  author = {Robert Genega and Mike Aebig and Dina Sagitova and Max Ricketts-Uy},
  month = {December},
  year = {2017},
@@ -39,4 +39,16 @@
  edition = {r2p1},
  year = {2010},
  url = {http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.dui0552a/BABJGHFJ.html}
+}
+
+@online{sqrtcordic,
+ title = {Square-root based on CORDIC},
+ url = {http://www.convict.lu/Jeunes/Math/square_root_CORDIC.htm}
+}
+
+@online{efunclog,
+ title = {Calculate exp() and log() Without Multiplications},
+ url = {https://www.quinapalus.com/efunc.html},
+ month = {July},
+ year = {2018}
 }
