Updated project report a little bit with IPS.

--- a/report/main.tex
+++ b/report/main.tex
@@ -34,7 +34,7 @@
   \Large{\insertauthor}
 \end{center}
 
-\section{Project Progress}
+\section{Approach}
 
 In the beginning we were hoping to implement the algorithms entirely on our own, but unfortunately
 the resources out there on CORDIC, especially beyond simply sine and cosine, are rather sparse.
@@ -58,6 +58,24 @@ main project as well we also tried to write $sqrt()$ in ARM as well and succeede
 multiply in order to simplify the algorithm. We found C code online and then used the sine-cosine ARM code
 as a base in order to write it in ARM.\cite{sqrtcordic}
 
+\section{Results}
+
+In order to get the CPI and other stats, we first needed to run ARMSim multiple times in order to get
+the average number of instructions per second from the console output. We borrowed this portion of the
+procedure from a previous group's project that we found on GitHub.\cite{oldreport} For the sine and
+cosine script we ran eight trials but one of the trials resulted in an extremely large instructions
+per second, so it was discarded as an outlier. When we reran that run with the same inputs, the result
+was equally as large. We're not sure if this is an error in the program or simply something that happens
+for some values.\\
+
+\begin{equation}
+    IPS_{sincos} = \frac{4739 + 4839 + 4675 + 4829 + 4926 + 4387 + 4939}{7} = 4762
+\end{equation}
+
+Unfortunately, as we're working on the report now we realized that the previous report we found was a
+piece of shit and wasn't actually correct.\cite{oldreport} We don't actually know how we're supposed to
+calculate the CPI without manually stepping through the program, something not really possible since it
+has hundreds of instructions total.
 
 % we can use this as a base for a table containing execution times.
 % \begin{table}[h]
