--- a/report/references.bib
+++ b/report/references.bib
@@ -52,3 +52,10 @@
  month = {July},
  year = {2018}
 }
+
+@online{oldreport,
+ title = {CMSC 411 Project Documentation},
+ author = {Justin Do and Rahsaan Hall and Benjamin Nace and Alexander Rochford},
+ year = {2017},
+ url = {https://github.com/BurningLights/411Project/blob/master/Documentation-2.pdf}
+}
