--- a/report/references.bib
+++ b/report/references.bib
@@ -59,3 +59,11 @@
  year = {2017},
  url = {https://github.com/BurningLights/411Project/blob/master/Documentation-2.pdf}
 }
+
+@misc{profemailresults,
+  author = {Russell Paul Cain},
+  howpublished = {{Private Communication}},
+  month = {November},
+  year = {2018},
+  institution  = {University of Maryland, Baltimore County}
+}
