--- a/report/references.bib
+++ b/report/references.bib
@@ -67,3 +67,19 @@
   year = {2018},
   institution  = {University of Maryland, Baltimore County}
 }
+
+@article{armsim,
+ title = {ARMSim: An Instruction-Set Simulator for the ARM processor },
+ author = {Alpa Shah},
+ institution = {Columbia University},
+ url = {http://www.cs.columbia.edu/~sedwards/classes/2001/w4995-02/reports/alpa.pdf}
+}
+
+@online{visUAL,
+ title = {VisUAL: A highly visual ARM emulator},
+ author = {Salman Arif},
+ institution = {Imperial College London},
+ month = {06},
+ year = {2015},
+ url = {https://salmanarif.bitbucket.io/visual/}
+}
